@@ -1,7 +1,9 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
- + 03Nov2012 Released Extrae version 2.3.1
+ * 24Jan2013 Fixed Paraver header generation when number of threads differs
+             across tasks.
+ + 14Jan2012 Released Extrae version 2.3.1
  * 14Jan2013 Fixed typo in MPI_Testall wrapper for Fortran
              Fixed error when generating .sym files. Now creating also local
 						 .sym files
